# denpa-bot.py

./: .env.example  .gitignore  README.md  config-template.json  config.json  database.py  logging.ini  main.py  pyproject.toml
base/: checks.py  config.py  database.py  logger.py  stack.py  utils.py
commands/: blacklist.py  config.py  cum.py  cum_stats.py  delete_guard.py  history.py  join.py  leave.py  music_player.py  play.py  role.py  test_command.py
config/: config.py
dao/: blacklist_dao.py  cringe_dao.py  cum_dao.py  dao.py  deleteguard_dao.py  denparty_dao.py  queue_dao.py  wood_dao.py
events/: auto_react.py  auto_role.py  cringe_event.py  delete_guard.py  koko_rainbow.py  ready_event.py  same_take.py  test_event.py  wood_event.py
models/: blacklist.py  cringe.py  cum.py  delete_guard.py  music_player.py  wood.py
persist/: .gitignore
schemas/: blacklist.py  cringe.py  cum.py  deleteguard.py  denparty.py  queue.py  wood.py
